@@ -23,6 +23,7 @@
     * Fix PrusaLink IP not getting reset from printer on shutdown
     * Fix the serial_number step in wizard
     * Modified endpoint api/files to optionally get specific directory instead of whole tree
+    * Added '/api/files/<target>/<path:re:.+>/raw' endpoint
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
